--- a/server/build.gradle
+++ b/server/build.gradle
@@ -31,9 +31,8 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
-//	runtimeOnly 'com.mysql:mysql-connector-j'
-
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	//runtimeOnly 'com.h2database:h2'
 
 	// JWT
 	implementation 'com.google.code.gson:gson'
