설정 파일 내용 추가

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring:
     url: jdbc:mysql://localhost:3306/bootlamp?serverTimezone=Asia/Seoul  # url 설정
     username: bootlamp_user  # 계정 설정
     password: bootlamp_user  # 비번 설정
+    
+mail:
+  address:
+    admin: jmkim7707@gmail.com    
