--- a/server/build.gradle
+++ b/server/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+	implementation 'org.mapstruct:mapstruct:1.5.3.Final' //lombok보다 뒤에 있어야 함
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
